# stock-market-agent

./: .env.aws.example  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  buildspec.yml  common_mcp_stock_market_tools.py  docker-compose.yml  main.py  pyproject.toml  streamlit_frontend.py
data/aws_reports/AAPL/: AAPL-5-year-financial-report.json  AAPL-5-year-financial-report.md
data/aws_reports/AMZN/: AMZN-5-year-financial-report.json  AMZN-5-year-financial-report.md
data/aws_reports/AVGO/: AVGO-5-year-financial-report.md  (+1 more)
data/evaluation/: golden_dataset.json
data/prompts/: prompts.json
docs/: ARCHITECTURE.md  AWS_CLOUDFORMATION_CICD.md  CHAT_HISTORY.md  CLOUDFORMATION_AWS_SETUP.md  CODEPIPELINE.md  LANGFUSE_RAGAS.md  LANGGRAPH_BEDROCK.md  MCP_TOOLS_CONTRACT.md  OBSERVABILITY_AND_QUALITY_REQUIREMENTS.md
infra/: ecs-task-definition.json
infra/cloudformation/: codepipeline-existing-parameters.example.json  codepipeline-existing-parameters.json  codepipeline-existing-resources.yml  parameters.dev.example.json  parameters.example.json  stock-market-agent.yml
scripts/: import_custom_users_to_rds.py  publish_langfuse_prompts.py  run_quality_evaluation.py
src/stock_market_agent/: api.py  config.py  models.py
tests/: test_bedrock_service.py  test_chat_history.py  test_evaluation.py  test_fastapi_backend.py  test_langgraph_supervisor.py  test_local_market_data.py  test_metrics.py  test_observability.py  test_portfolio_agent.py  test_prompt_catalog.py  test_risk_alerts.py  test_stock_agent.py  test_supervisor_agent.py
(+32 files in other folders)
