[project]
name = "stock-market-agent"
version = "0.1.0"
description = "Multi-agent stock market research app with Streamlit, AWS, and shared MCP tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "langfuse>=3.0.0",
    "langgraph>=0.2.0",
    "mcp>=1.28.1",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "requests>=2.32.0",
    "ragas>=0.2.0",
    "streamlit>=1.36.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
